fix jwt_secret in docs
