# lib/realtime_web/controllers/tenant_controller.ex
@@ -164,6 +164,7 @@ defmodule RealtimeWeb.TenantController do
           properties do
             name(:string, "", required: false, example: "tenant1")
             max_concurrent_users(:integer, "", required: false, example: 10_000)
+            jwt_secret(:string, "", required: true, maxLength: 500, example: "big_secret")
             extensions(:array, "", required: true, items: Schema.ref(:ExtensionPostgresReq))
           end
         end,
